--- a/client/src/components/PropertyListing/PropertyCardCollection/propertyCard/PropertyCard.css
+++ b/client/src/components/PropertyListing/PropertyCardCollection/propertyCard/PropertyCard.css
@@ -1,10 +1,17 @@
 .propertyCard{
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    border: 1px solid grey;
+    border: 1px solid #e4e4e4;
+    min-height: 350px;
+    padding: 15px;
 }
 
 .propertyCard img {
     width: 250px;
-    border: 1px solid grey;
+    border: 1px solid #e4e4e4;
+}
+
+.propertyInfo {
+    margin-top: auto;
 }
