--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,39 @@
-.App {
+.Controls {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: white;
+}
+
+.ControlsPlaceholder {
+  height: 366px;
+  width: 100%;
+}
+@media only screen and (min-width: 768px) {
+  .ControlsPlaceholder {
+    height: 144px;
+  }
+}
+
+.PropertiesHeader {
+  padding: 0 15px;
+}
+
+nav {
+  padding: 5px 15px;
+  color: #00A68C;
+  font-weight: bold;
+  font-size: 25px;
+  height:50px;
+  width: 100%;
+  background-color: 100%;
+  border-bottom: 2px solid #00A68C;
+
+}
+
+.AppTitle{
+  font-weight: bold;
+  color: rgb(46, 46, 46);
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
