--- a/client/src/components/PropertyListing/FilterTab/FilterTab.css
+++ b/client/src/components/PropertyListing/FilterTab/FilterTab.css
@@ -1,4 +1,20 @@
+.FilterTab {
+    padding: 10px 15px;
+}
+
 .form-control {
     display: inline-block;
-    max-width: 150px;
+    width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+    .form-control {
+        display: inline-block;
+        max-width: 150px;
+    }
+    
+}
+
+.control-label {
+    display: block;
 }
